Combine fields with multiple options to a single model. Use a single regex for each field. Use constructors to assign values.